--- a/generic.html
+++ b/generic.html
@@ -32,7 +32,7 @@
 										<li><a href="other.html" class="logo"><strong>Other </strong></a></li>
 
 										<li><a href="#" class="logo"><strong>         </strong></a></li>
-										<li><a href= "mailto: eaniosfils21@gmail.com" class="icon communication fas fa-envelope-square"><span class="fa-envelope"></span></a></li>
+										<li><a href= "mailto: eaniosfils21@gmail.com" class="icon fa fa-envelope"><span class="label"></span></a></li>
 
 										<li><a href="https://www.linkedin.com/in/emmanuelafmompremier/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 										<li><a href="https://github.com/emmanuel-mp" class="icon brands fa-github"><span class="label">Github</span></a></li>
@@ -87,7 +87,7 @@
 									
 									<ul class="icons">
 										<li><a class="logo"><strong>Contact Me at:</strong></a> </li>
-										<li><a href= "mailto: eaniosfils21@gmail.com" class="icon communication fas fa-envelope-square"><span class="fa-envelope"></span></a></li>
+										<li><a href= "mailto: eaniosfils21@gmail.com" class="icon fa fa-envelope"><span class="label"></span></a></li>
 
 										<li><a href="https://www.linkedin.com/in/emmanuelafmompremier/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 										<li><a href="https://github.com/emmanuel-mp" class="icon brands fa-github"><span class="label">Github</span></a></li>
