--- a/ev_charging.html
+++ b/ev_charging.html
@@ -31,7 +31,7 @@
 										<li><a href="other.html" class="logo"><strong>Other </strong></a></li>
 
 										<li><a href="#" class="logo"><strong>         </strong></a></li>
-										<li><a href= "mailto: eaniosfils21@gmail.com" class="icon communication fas fa-envelope-square"><span class="fa-envelope"></span></a></li>
+										<li><a href= "mailto: eaniosfils21@gmail.com" class="icon fa fa-envelope"><span class="label"></span></a></li>
 
 										<li><a href="https://www.linkedin.com/in/emmanuelafmompremier/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 										<li><a href="https://github.com/emmanuel-mp" class="icon brands fa-github"><span class="label">Github</span></a></li>
@@ -60,7 +60,7 @@
 										<li><strong>Keywords:</strong> Electric Vehicle, Microgrid, Charging Station, Optimization, MILP, Software Development </li>
 										<li><strong>Tools:</strong> Python, Pyomo, CBC Solver </li>
 										<li><strong>Other Contributors:</strong>  P. Losi, O. Olugbayila, Y. Li </li>
-										<li><strong>Links:</strong> <a href="https://github.com/emmanuel-mp/operational-planing-charging-pool"> [Github]</a> <a href="pdfs/Operational planning _report.pdf"> [PDF]</a> </li>
+										<li><strong>Links:</strong> <a href="https://github.com/emmanuel-mp/operational-planing-charging-pool"> [Github]</a> <a href="#"> [PDF]</a> </li>
 										
 									</ul>
 
